# coding-agents-with-e2b

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: agent.py  prompts.py  sandbox.py  sbx_tools.py  tools.py  ui.py
