[project]
name = "coding-agents-with-e2b"
version = "0.1.0"
description = "Unified AI coding platform with E2B sandboxes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e2b-code-interpreter==2.2.0",
    "openai==2.4.0",
    "gradio>=5.49.0",
    "gradio-browser==0.0.3",
    "gradio-aicontext==0.0.4",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
    "rich>=14.1.0",
    "tiktoken>=0.9.0",
    "ipython>=9.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
app = "main:main"
